# matching-engine

./: CMakeLists.txt  Order.cpp  Order.hpp  README.md  build.sh  main.cpp
engine/: ContinuousMatchingEngine.cpp  ContinuousMatchingEngine.hpp  MatchingEngine.cpp  MatchingEngine.hpp  Trade.cpp  Trade.hpp
order/: Comparators.cpp  Order.cpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  OrderFactory.cpp  OrderFactory.hpp
tests/: CMakeLists.txt  ContinuousMatchingEngineTests.cpp  MatchingEngineTests.cpp  OrderBookTests.cpp  OrderFactoryTests.cpp  OrderTests.cpp  ThreadingTests.cpp  TradeTests.cpp
threading/: CMakeLists.txt  SymbolThreadPool.cpp  SymbolThreadPool.hpp
